fix: css: z-index added
code statistics / code view layer above player

--- a/Client/player/pocketCodePlayer.css
+++ b/Client/player/pocketCodePlayer.css
@@ -37,6 +37,7 @@
     -ms-user-select: none;
     user-select: none;
     cursor: default;
+    z-index: 100000;
 }
 /* overlay */
 .pc-webOverlay {
